Use Component(1) for SUIT package development

--- a/lib/templates/app/bower.json
+++ b/lib/templates/app/bower.json
@@ -4,9 +4,11 @@
     "version": "0.0.0",
     "main": "<%= moduleFileName %>",
     "ignore": [
+        "build",
+        "components",
         "test",
-        ".csslintrc",
-        ".travis.yml",
+        ".*",
+        "Makefile",
         "CHANGELOG.md",
         "component.json",
         "package.json",
