--- a/lib/templates/app/package.json
+++ b/lib/templates/app/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "version": "0.0.0",
   "devDependencies": {
+    "component": "*",
     "csslint": ">=0.9.10"
   },
   "scripts": {
