Add 'suit-test' to generated app dev dependencies

--- a/lib/templates/app/bower.json
+++ b/lib/templates/app/bower.json
@@ -3,6 +3,9 @@
     "description": "",
     "version": "0.0.0",
     "main": "<%= moduleFileName %>",
+    "devDependencies": {
+        "suit-test": "*"
+    },
     "ignore": [
         "build",
         "components",
