--- a/lib/templates/app/package.json
+++ b/lib/templates/app/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "version": "0.0.0",
   "devDependencies": {
-    "component": "*",
-    "csslint": ">=0.9.10"
+    "component": "*"
   },
   "scripts": {
-    "test": "./node_modules/.bin/csslint *.css"
   }
 }
