--- a/lib/templates/app/package.json
+++ b/lib/templates/app/package.json
@@ -2,26 +2,32 @@
   "name": "suitcss-<%= modulePackageName %>",
   "description": "",
   "version": "0.0.0",
-  "style": "<%= moduleFileName %>",
+  "style": "index.css",
   "files": [
-    "component.json",
-    "<%= moduleFileName %>"
+    "index.css",
+    "index.js",
+    "lib"
   ],
   "devDependencies": {
-    "component": "0.19.x",
-    "component-builder-suit": "0.2.x",
-    "suitcss-preprocessor": "0.1.x"
+    "suitcss-components-test": "*",
+    "suitcss-preprocessor": "~0.3.0"
   },
   "scripts": {
-    "build": "npm run component && npm run preprocess",
-    "build-test": "npm run component-dev && npm run preprocess",
-    "component": "component install && component build --use component-builder-suit",
-    "component-dev": "component install --dev && component build --dev --use component-builder-suit",
-    "preprocess": "suitcss build/build.css build/build.css"
+    "build": "npm run setup && npm run preprocess",
+    "build-test": "npm run setup && npm run preprocess-test",
+    "preprocess": "suitcss index.css build/build.css",
+    "preprocess-test": "suitcss test/test.css build/test.css",
+    "setup": "npm install && mkdir -p build"
+  },  
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/suitcss/<%= modulePackageName %>.git"
   },
   "keywords": [
-    "suit",
-    "css",
-    "component"
+    "browser",
+    "css-components",
+    "<%= modulePackageName %>",
+    "suitcss",
+    "style"
   ]
 }
