--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-suit",
-  "version": "1.0.0",
+  "version": "0.5.0",
   "description": "Generator for scaffolding out a SUIT component or utility",
   "homepage": "https://github.com/suitcss/generator-suit",
   "author": {
@@ -9,7 +9,7 @@
   "files": [
     "generators"
   ],
-  "main": "generators/index.js",
+  "main": "generators/app/index.js",
   "keywords": [
     "yeoman-generator",
     "generator",
