--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "no-param-reassign": [0],
     "no-use-before-define": [2, "nofunc"],
     "space-before-function-paren": 0,
+    "space-infix-ops": 0,
     "object-curly-spacing": 0
   }
 }
