Rename package name + npm package name conflict

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-particle",
+  "name": "generator-particlecss",
   "version": "0.1.0-alpha",
   "description": "Generator for scaffolding out a PARTICLE component or utility (based on generator-suit)",
   "keywords": [
